animation changes, set up sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div id="buttons-container" class="w-100 h-fit flex flex-col justify-center items-center gap-3 mt-5">
                 <button
-                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Rólam</button>
+                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950">Rólam</button>
                 <button
                     class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Galéria</button>
                 <button
@@ -40,6 +40,10 @@
             </div>
         </div>
     </div>
+    <section id="aboutMe" class="w-screen h-fit"></section>
+    <section id="gallery" class="w-screen h-fit"></section>
+    <section id="reviews" class="w-screen h-fit"></section>
+    <section id="contact" class="w-screen h-fit"></section>
     <script src="/JS/script.js"></script>
 </body>
 
