--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                         <p class="text-2xl font-semibold text-gray-700 tracking-tight">Rugalmas</p>
             </div>
             <div id="buttons-container" class="w-100 h-fit flex flex-col justify-center items-center gap-3 mt-5">
-                <button
-                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950">Rólam</button>
+                <a href="#aboutMe"
+                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950">
+                    <button>Rólam</button>
+                </a>
                 <button
                     class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Galéria</button>
                 <button
@@ -40,10 +42,36 @@
             </div>
         </div>
     </div>
-    <section id="aboutMe" class="w-screen h-fit"></section>
-    <section id="gallery" class="w-screen h-fit"></section>
+    <section id="aboutMe" class="w-screen h-fit p-4 flex flex-col md:flex-row gap-4 items-center bg-slate-300 mb-11">
+        <div class="image-container w-full md:w-1/2 h-auto mt-2.5 justify-center items-center">
+            <img src="/images/aboutMe.jpg" alt="Bogatin Endre" class="border-0 rounded-2xl">
+        </div>
+        <div class="text-container p-4 w-full md:w-1/2 text-center justify-center align-middle">
+            <h1 class="text-4xl uppercase font-light text-gray-900 tracking-tighter mb-3.5">Rólam</h1>
+            <p class="text-sm text-justify">
+                Az életet élni kell és minden napban ott van az új lehetőség. Sokfelé sodort az élet, sok mindent
+                kipróbáltam
+                életem során. Az eredeti szakmám gimnáziumi tanár, felnőttoktatásban jelenleg is dolgozom. A
+                rendezvények -
+                legyenek iskolai vagy egyéb felkérések – révén a műsorvezetésbe is belekóstoltam, majd jött a
+                ceremóniamesterség. Akárhol is jártam és bármit is csináltam, a lelkem legmélyén mindig azt éreztem,
+                hogy
+                emberekkel kell foglalkoznom! Bárkivel pillanatok alatt megtalálom a közös hangot, iskolai
+                végzettségtől,
+                életkortól, bőrszíntől, vallási hovatartozástól és anyagi helyzettől függetlenül. Ezért határoztam el,
+                hogy
+                olyan tevékenységgel szeretnék foglalkozni, ahol ezt a képességemet maradéktalanul kamatoztathatom, és
+                az
+                másoknak is élmény legyen.
+            </p>
+        </div>
+    </section>
+    <section id="gallery" class="w-screen h-fit p-4 flex justify-center items-center bg-slate-500">
+        <h1 class="text-4xl uppercase font-light text-gray-200 tracking-tighter mb-3.5 text-center">Galéria</h1>
+    </section>
     <section id="reviews" class="w-screen h-fit"></section>
     <section id="contact" class="w-screen h-fit"></section>
+
     <script src="/JS/script.js"></script>
 </body>
 
