--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
             </div>
             <div id="buttons-container" class="w-100 h-fit flex flex-col justify-center items-center gap-3 mt-5">
                 <a href="#aboutMe"
-                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950">
-                    <button>Rólam</button>
+                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950">
+                    <button class="uppercase">Rólam</button>
                 </a>
-                <button
-                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Galéria</button>
+                <a href="#gallery"
+                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">
+                    <button class="uppercase">Galéria</button>
+                </a>
                 <button
                     class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Visszajelzések</button>
                 <button
@@ -42,7 +44,7 @@
             </div>
         </div>
     </div>
-    <section id="aboutMe" class="w-screen h-fit p-4 flex flex-col md:flex-row gap-4 items-center bg-slate-300 mb-11">
+    <section id="aboutMe" class="w-screen h-fit p-4 flex flex-col md:flex-row gap-4 items-center bg-slate-300">
         <div class="image-container w-full md:w-1/2 h-auto mt-2.5 justify-center items-center">
             <img src="/images/aboutMe.jpg" alt="Bogatin Endre" class="border-0 rounded-2xl">
         </div>
@@ -66,8 +68,47 @@
             </p>
         </div>
     </section>
-    <section id="gallery" class="w-screen h-fit p-4 flex justify-center items-center bg-slate-500">
+    <section id="gallery" class="w-screen h-fit p-4 flex-col justify-center items-center bg-slate-500">
         <h1 class="text-4xl uppercase font-light text-gray-200 tracking-tighter mb-3.5 text-center">Galéria</h1>
+        <div id="gallery-container" class="w-full lg:w-1/2 relative mx-auto">
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-1.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-2.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-3.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+
+                <img src="/images/gallery-4.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+
+                <img src="/images/gallery-5.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-6.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-7.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-8.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-9.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <div class="gallerySlide fade hidden">
+                <img src="/images/gallery-10.jpg" alt="" class="galleryImage rounded-2xl">
+            </div>
+            <!-- Navigation Buttons -->
+            <a id="prev" onclick="changeSlides(-1)"
+                class="cursor-pointer absolute top-1/2 py-1.5 px-3 -mt-3.5 bg-slate-200 rounded-2xl">&#10094;</a>
+            <a id="next" onclick="changeSlides(1)"
+                class="cursor-pointer absolute top-1/2 right-0 py-1.5 px-3 -mt-3.5 bg-slate-200 rounded-2xl">&#10095;</a>
+        </div>
     </section>
     <section id="reviews" class="w-screen h-fit"></section>
     <section id="contact" class="w-screen h-fit"></section>
