--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
@@ -19,8 +20,8 @@
             class="w-full md:w-1/2 lg:w-1/3 h-screen flex flex-col text-center items-center bg-gradient-to-b from-gray-400 to-transparent">
             <div id="header-container" class="mt-5 w-100 p-3.5 flex flex-col justify-evenly">
                 <h1 class="text-4xl uppercase font-light text-gray-900 tracking-tighter mb-3.5">Bogatin Endre</h1>
-                <h1 class="text-4xl font-light text-gray-800 tracking-wide">Rendezvényszervező</h3>
-                    <h1 class="text-4xl font-light text-gray-800 tracking-wide mb-4.5">Ceremóniamester</h3>
+                <h1 class="text-2xl lg:text-4xl font-light text-gray-800 tracking-wide">Rendezvényszervező</h3>
+                    <h1 class="text-2xl lg:text-4xl font-light text-gray-800 tracking-wide mb-4.5">Ceremóniamester</h3>
                         <p class="text-2xl font-semibold text-gray-700 tracking-tight">Dinamikus</p>
                         <p class="text-2xl font-semibold text-gray-700 tracking-tight">Empatikus</p>
                         <p class="text-2xl font-semibold text-gray-700 tracking-tight">Rugalmas</p>
@@ -41,8 +42,10 @@
                 <button
                     class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Kapcsolat</button>
             </div>
-            <div id="social-icons-container">
-
+            <div id="social-icons-container p-5">
+                <a href="https://www.facebook.com/people/Cerem%C3%B3niamester-Endre/100063056690228/" target="_blank"><i
+                        class="fa-brands fa-facebook text-4xl m-2.5"></i></a>
+                <a href=mailto:endrebogatin@gmail.com"><i class="fa-solid fa-envelope text-4xl m-2.5"></i></a>
             </div>
         </div>
     </div>
@@ -132,72 +135,83 @@
                 megkedvelt az
                 este folyamán.</p>
             <h3 class="text-2xl uppercase tracking-tight">Reni és Bazsi</h3>
-            <h4 class="text-xl mb-3.5">2019.06.22</h4>
-            <p class="mb-5">A forgatókönyvet nem kellett nagyon használni, mert ránk szakadt az ég. De egyből tudtad mit
+            <h4 class="mb-3.5">2019.06.22</h4>
+            <p class="mb-5 text-sm">A forgatókönyvet nem kellett nagyon használni, mert ránk szakadt az ég. De egyből
+                tudtad mit
                 és hogyan kell tenni, így fennakadás nélkül zajlottak az események. Szívből ajánljuk Endrét!</p>
             <h3 class="text-2xl uppercase tracking-tight">Barbi és Bandi</h3>
-            <h4 class="text-xl mb-3.5">2019.08.31.</h4>
-            <p class="mb-5">Nagyon szépen köszönjük, hogy mellettünk voltál és mindenben segítettél. A lánykéréstől a
+            <h4 class="mb-3.5">2019.08.31.</h4>
+            <p class="mb-5 text-sm">Nagyon szépen köszönjük, hogy mellettünk voltál és mindenben segítettél. A
+                lánykéréstől a
                 menyecsketáncig minden percét élveztük a napnak.</p>
             <h3 class="text-2xl uppercase tracking-tight">Nóri és Robi</h3>
-            <h4 class="text-xl mb-3.5">2019.09.06.</h4>
-            <p class="mb-5">Szuper volt! Ezt a szervezést kevesen tudták volna megcsinálni, de nemhiába, téged
+            <h4 class="mb-3.5">2019.09.06.</h4>
+            <p class="mb-5 text-sm">Szuper volt! Ezt a szervezést kevesen tudták volna megcsinálni, de nemhiába, téged
                 választottunk. Nem bántuk meg, nagyon szépen köszönjük Endre!</p>
             <h3 class="text-2xl uppercase tracking-tight">Afrodité és Roland</h3>
-            <h4 class="text-xl mb-3.5">2019.12.28.</h4>
-            <p class="mb-5">Abszolút meglepetés voltál nekünk kedve Endre. A szülőbúcsúztatástól a mennyecsketáncig
+            <h4 class="mb-3.5">2019.12.28.</h4>
+            <p class="mb-5 text-sm">Abszolút meglepetés voltál nekünk kedve Endre. A szülőbúcsúztatástól a
+                mennyecsketáncig
                 olyan szuper volt minden, hogy csak ajánlani tudunk minden ifjú párnak. Köszönjük!</p>
             <h3 class="text-2xl uppercase tracking-tight">Ági és Zoli</h3>
-            <h4 class="text-xl mb-3.5">2020.02.15.</h4>
-            <p class="mb-5">Sziasztok! Endrét csak ajánlani tudom! A félmondatos irányba tereléstől a hosszabb, jópofa
+            <h4 class="mb-3.5">2020.02.15.</h4>
+            <p class="mb-5 text-sm">Sziasztok! Endrét csak ajánlani tudom! A félmondatos irányba tereléstől a hosszabb,
+                jópofa
                 monológokig széles regiszterben mozog. Nagyon megbízható és ami a leglényegesebb vidám - amilyennek egy
                 esküvőnek amúgy is lennie kell! 😉 Akció: ha MOST keltek egybe, akár az aranylakodalmat is elvállalhatja
                 - de az ezüstöt több eséllyel! 😉</p>
             <h3 class="text-2xl uppercase tracking-tight">Liza és Patrik</h3>
-            <h4 class="text-xl mb-3.5">2020.07.11.</h4>
-            <p class="mb-5">Csak a szépre emlékezünk! :) Volt egy nagy lélekromboló jelenet, tudod..... Endre! De a buli
+            <h4 class="mb-3.5">2020.07.11.</h4>
+            <p class="mb-5 text-sm">Csak a szépre emlékezünk! :) Volt egy nagy lélekromboló jelenet, tudod..... Endre!
+                De a buli
                 ment, sőt, a tetőfokára hágott! Köszönjük!</p>
             <h3 class="text-2xl uppercase tracking-tight">Emese és Dani</h3>
-            <h4 class="text-xl mb-3.5">2020.09.05.</h4>
-            <p class="mb-5">Drága Endre! Többszöri találkozó után olyan voltál velünk, mint a vendégeinkkel. Nevető,
+            <h4 class="mb-3.5">2020.09.05.</h4>
+            <p class="mb-5 text-sm">Drága Endre! Többszöri találkozó után olyan voltál velünk, mint a vendégeinkkel.
+                Nevető,
                 rugalmas, megunhatatlan. Gyere legközelebb is, csak több esküvőt nem tervezünk. Ajánlunk sok
                 szeretettel! :) </p>
             <h3 class="text-2xl uppercase tracking-tight">DJ Tomix (Benkucs Tamás)</h3>
-            <h4 class="text-xl mb-3.5">2021.07.24.</h4>
-            <p class="mb-5">De hatalmas buli volt! Köszi a részvételed szuper voltál!</p>
+            <h4 class="tmb-3.5">2021.07.24.</h4>
+            <p class="mb-5 text-sm">De hatalmas buli volt! Köszi a részvételed szuper voltál!</p>
 
             <h3 class="text-2xl uppercase tracking-tight">Mariett és Zsolt</h3>
-            <h4 class="text-xl mb-3.5">2021.08.14.</h4>
-            <p class="mb-5">Nagyon köszi mindent Endre. 😊 Csak ismételni tudom magam, nálad jobb CM választásunk nem is
+            <h4 class="mb-3.5">2021.08.14.</h4>
+            <p class="mb-5 text-sm">Nagyon köszi mindent Endre. 😊 Csak ismételni tudom magam, nálad jobb CM
+                választásunk nem is
                 lehetett volna! Szuper profi vagy és baromi jófej! Imádtuk az esküvő minden percét!</p>
 
             <h3 class="text-2xl uppercase tracking-tight">Gyöngyi és Balázs</h3>
-            <h4 class="text-xl mb-3.5">2021.10.09.</h4>
-            <p class="mb-5">Nagyon örülünk ,nagyon jól éreztünk magunkat. 🥰🥰 A legjobbat kaptuk meg a te személyedben!
+            <h4 class="mb-3.5">2021.10.09.</h4>
+            <p class="mb-5 text-sm">Nagyon örülünk ,nagyon jól éreztünk magunkat. 🥰🥰 A legjobbat kaptuk meg a te
+                személyedben!
             </p>
 
             <h3 class="text-2xl uppercase tracking-tight">Liza és Adrián</h3>
-            <h4 class="text-xl mb-3.5">2022.06.04.</h4>
-            <p class="mb-5">Nagyon jól alakult minden szerencsére, és ez neked köszönhető!!
+            <h4 class="mb-3.5">2022.06.04.</h4>
+            <p class="mb-5 text-sm">Nagyon jól alakult minden szerencsére, és ez neked köszönhető!!
             </p>
 
             <h3 class="text-2xl uppercase tracking-tight">Réka és Peti</h3>
-            <h4 class="text-xl mb-3.5">2022.07.01.</h4>
-            <p class="mb-5">Nagyon köszönünk mindent Endre, fantasztikus voltál!</p>
+            <h4 class="mb-3.5">2022.07.01.</h4>
+            <p class="mb-5 text-sm">Nagyon köszönünk mindent Endre, fantasztikus voltál!</p>
 
             <h3 class="text-2xl uppercase tracking-tight">Szekeres Péter DJ</h3>
-            <h4 class="text-xl mb-3.5">2022.08.13.</h4>
-            <p class="mb-5">Várom, hogy újra együtt dolgozzunk. Azóta sem volt egyik lagziban sem hozzád hasonló CM. :)
+            <h4 class="mb-3.5">2022.08.13.</h4>
+            <p class="mb-5 text-sm">Várom, hogy újra együtt dolgozzunk. Azóta sem volt egyik lagziban sem hozzád hasonló
+                CM. :)
             </p>
 
             <h3 class="text-2xl uppercase tracking-tight">Réka és Norbi</h3>
-            <h4 class="text-xl mb-3.5">2022.09.04.</h4>
-            <p class="mb-5">Köszönjük szépen a munkádat és a jelenletedet, nagyon jól menedzseltél mindent, nagyon
+            <h4 class="mb-3.5">2022.09.04.</h4>
+            <p class="mb-5 text-sm">Köszönjük szépen a munkádat és a jelenletedet, nagyon jól menedzseltél mindent,
+                nagyon
                 szimpatikus voltal mindenkinek,pont ahogy elképzeltük.</p>
 
             <h3 class="text-2xl uppercase tracking-tight">Veronika, vendég</h3>
-            <h4 class="text-xl mb-3.5">2023.05.13.</h4>
-            <p class="mb-5">Nagyon jól éreztük magunkat a családdal, igazán szuper lagzi volt. Nagyon jó és profi volt a
+            <h4 class="mb-3.5">2023.05.13.</h4>
+            <p class="mb-5 text-sm">Nagyon jól éreztük magunkat a családdal, igazán szuper lagzi volt. Nagyon jó és
+                profi volt a
                 ceremóniamester.
 
             </p>
