finished adding reviews

--- a/index.html
+++ b/index.html
@@ -213,7 +213,69 @@
             <p class="mb-5 text-sm">Nagyon jól éreztük magunkat a családdal, igazán szuper lagzi volt. Nagyon jó és
                 profi volt a
                 ceremóniamester.
+            </p>
 
+            <h3 class="text-2xl uppercase tracking-tight">Sándor, férj</h3>
+            <h4 class="mb-3.5">2023.05.27.</h4>
+            <p class="mb-5 text-sm">Pont így képzeltem el, tudtam, hogy Te kellesz!
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Örömapa</h3>
+            <h4 class="mb-3.5">2023.06.03.</h4>
+            <p class="mb-5 text-sm">Fantasztikus, szellemes, ülnek a poénok. Te vagy a legjobb!
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Anita, vendég</h3>
+            <h4 class="mb-3.5">2023.06.03.</h4>
+            <p class="mb-5 text-sm">Hogy így hoztad a hangulatot, váó, mindenki nagyon dicsért, hogy milyen kedves és
+                szimpatikus vagy! El voltak ájulva, hogy milyen jól táncolsz! Nagyon pozitív ember vagy! 😊
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Patrik, férj</h3>
+            <h4 class="mb-3.5">2023.06.17.</h4>
+            <p class="mb-5 text-sm">Abszolút így képzeltük el, köszönjük.
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Tamás, vendég</h3>
+            <h4 class="mb-3.5">2023.07.08.</h4>
+            <p class="mb-5 text-sm">Sok lagzit láttam, de a Tied egyedi, humoros, így tovább!
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Sanyi, vendég</h3>
+            <h4 class="mb-3.5">2023.08.19.</h4>
+            <p class="mb-5 text-sm">Le a kalappal a szervezés előtt.
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Lili és Zoli</h3>
+            <h4 class="mb-3.5">2024.05.05.</h4>
+            <p class="mb-5 text-sm">Köszönünk szépen mindent még egyszer!😁Dicsérték a játékokat nagyon es hogy szuper
+                voltál.
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Sára és Gergő</h3>
+            <h4 class="mb-3.5">2024.05.31.</h4>
+            <p class="mb-5 text-sm">Köszönünk mindent, nagyon jó napunk volt! :)
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Horváth-Lenner duó</h3>
+            <h4 class="mb-3.5">2024.08.03.</h4>
+            <p class="mb-5 text-sm">Profi, együttműködő, ja és vicces. :)
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Horváth Dóri és Ádám</h3>
+            <h4 class="mb-3.5">2024.09.08.</h4>
+            <p class="mb-5 text-sm">Köszönjük az események kordában tartását, nagyon jól éreztük magunkat!
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Kele Mariann, vendég</h3>
+            <h4 class="mb-3.5">2024.09.21.</h4>
+            <p class="mb-5 text-sm">Sok ember boldogságát felejthetetlenné tetted.
+            </p>
+
+            <h3 class="text-2xl uppercase tracking-tight">Fanni és Robin</h3>
+            <h4 class="mb-3.5">2024.09.22.</h4>
+            <p class="mb-5 text-sm">Szeretnénk megköszönni, hogy eljöttél, és hogy boldoggá tetted a napunkat. Nagyon
+                jól éreztük magunkat, elképesztően szuper volt, mindenki imádott Téged.
             </p>
 
         </div>
