Intersection Observer, style updates

--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
                     class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">
                     <button class="uppercase">Visszajelzések</button>
                 </a>
-                <button
-                    class="cursor-pointer px-6 py-3 rounded-3xl bg-gray-500 text-white uppercase font-semibold w-1/2 transition duration-300 hover:bg-gray-800 active:bg-gray-950 ">Kapcsolat</button>
             </div>
             <div id="social-icons-container p-5">
+                <h1 class="uppercase mt-5 font-bold text-white">Kapcsolat</h1>
                 <a href="https://www.facebook.com/people/Cerem%C3%B3niamester-Endre/100063056690228/" target="_blank"><i
-                        class="fa-brands fa-facebook text-4xl m-2.5"></i></a>
-                <a href=mailto:endrebogatin@gmail.com"><i class="fa-solid fa-envelope text-4xl m-2.5"></i></a>
+                        class="fa-brands fa-facebook text-4xl text-white m-2.5"></i></a>
+                <a href=mailto:endrebogatin@gmail.com"><i
+                        class="fa-solid fa-envelope text-4xl text-white m-2.5"></i></a>
             </div>
         </div>
     </div>
-    <section id="aboutMe" class="w-screen h-fit p-4 flex flex-col md:flex-row gap-4 items-center bg-slate-300">
+    <section id="aboutMe"
+        class="hiddenContent w-screen h-fit p-4 flex flex-col md:flex-row gap-4 items-center bg-slate-300">
         <div class="image-container w-full md:w-1/2 h-auto mt-2.5 justify-center items-center">
             <img src="/images/aboutMe.jpg" alt="Bogatin Endre" class="border-0 rounded-2xl">
         </div>
@@ -73,7 +74,7 @@
             </p>
         </div>
     </section>
-    <section id="gallery" class="w-screen h-fit p-4 flex-col justify-center items-center bg-slate-500">
+    <section id="gallery" class="hiddenContent w-screen h-fit p-4 flex-col justify-center items-center bg-slate-500">
         <h1 class="text-4xl uppercase font-light text-gray-200 tracking-tighter mb-3.5 text-center">Galéria</h1>
         <div id="gallery-container" class="w-full lg:w-1/2 relative mx-auto">
             <div class="gallerySlide fade hidden">
@@ -115,7 +116,7 @@
                 class="cursor-pointer absolute top-1/2 right-0 py-1.5 px-3 -mt-3.5 mr-1.5 bg-slate-200 rounded-2xl">&#10095;</a>
         </div>
     </section>
-    <section id="reviews" class="w-screen h-fit p-4 bg-slate-300">
+    <section id="reviews" class="hiddenContent w-screen h-fit p-4 bg-slate-300">
         <h1 class="text-4xl uppercase font-light text-gray-900 tracking-tighter mb-5 mt-5 text-center">Visszajelzések
         </h1>
         <div id="reviews-container" class="bg-slate-700  text-sky-100 w-[75] h-fit p-7.5 rounded-xl">
@@ -280,7 +281,6 @@
 
         </div>
     </section>
-    <section id="contact" class="w-screen h-fit"></section>
     <script src="/JS/script.js"></script>
 </body>
 
